fix(plugins/plugin-client-common): another fix for low-contrast theme selector

--- a/plugins/plugin-client-common/web/scss/components/StatusStripe/StatusStripe.scss
+++ b/plugins/plugin-client-common/web/scss/components/StatusStripe/StatusStripe.scss
@@ -213,7 +213,7 @@ $z-index: var(--pf-global--ZIndex--xs);
       background-color: transparent;
     }
     @include DropdownToggle {
-      color: inherit;
+      color: inherit !important;
       font-size: inherit;
     }
     @include DropdownItem {
